tested execution creation + fixed minor bugs

--- a/config/extension.yaml
+++ b/config/extension.yaml
@@ -1,6 +1,6 @@
 metadata:
-  uuid: 0e4a4d9f-dd90-4173-b737-eeb75395a61a
-  version_uuid: 8cadcef4-fc8d-4d35-b261-94b1a49cb0a7
+  uuid: 9c3c016f-d6b9-4a16-853e-1c84c369d659
+  version_uuid: dda2c6ea-a7a4-4512-a063-0ae858b1994b
   name: sql-gen
-  author: nuzur
+  author: mklfarha
   steps: 1
